	PR c++/5287, PR c++/7910,  PR c++/11021 	* config/i386/winnt.c (ix86_handle_dll_attribute): Don't add 	dllimport attribute if function is defined at declaration, but 	report error instead. Likewise for dllimport'd variable 	definitions.  Set implicit TREE_PUBLIC for dllimport'd variables 	declared within functions, Report error if dllimport or dllexport 	symbol is not global. 	(i386_pe_dllimport_p): Ignore dllimport attribute of functions 	if defined after declaration or if inlined. Don't allow definition 	of static data members of C++ classes. Don't dllimport virtual 	methods. 	(i386_pe_mark_dllexport): Warn about inconsistent dll attributes. 	(i386_pe_mark_dllimport): Remove unnecessary checks. 	(i386_pe_encode_section_info): Warn if the dllimport attribute 	and symbol prefix have been instantiated and then overridden.

* doc/extend.texi: Document dllimport and dllexport attributes.

	* config/i386/winnt.c (i386_pe_output_labelref): Fix indents.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@68916 138bc75d-0d04-0410-961f-82ee72b054a4